spacing corrections for borders

--- a/less/index.less
+++ b/less/index.less
@@ -112,6 +112,7 @@ html, body {
 	.intro{
 		.flexAround();
 		border-bottom: 2px dotted @secondary-color; 
+		padding-bottom: 20px;
 		.introtext{
 			.flexCenter();
 			display: inline-flex;
@@ -170,7 +171,7 @@ html, body {
 	.contact{
 		.flexCenter();
 		border-top: 2px dotted @secondary-color; 
-		margin-top: 20px;
+		padding-top: 20px;
 		address {
 			font-size: @other-font;
 			text-align: center;
